fix image patterns error, fix menu button mobile view

--- a/kawiv1/app/globals.css
+++ b/kawiv1/app/globals.css
@@ -35,10 +35,10 @@
     color: #fff;
     padding: 20px;
     z-index: 100; /* Adjust the z-index as needed, ensure it's higher than other content */
-    #locale,
+    /* #locale,
     #other {
       display: none;
-    }
+    } */
   }
 }
 
